libtvg/tvg.h

#define LIBTVG_API_VERSION  0x00000009ULL
#define TVG_FLAGS_POSITIVE  0x00000002U  /* weights are always positive */
#define TVG_FLAGS_DIRECTED  0x00000004U  /* edges are directed */
#define TVG_FLAGS_STREAMING 0x00000008U  /* streaming mode */
#define TVG_FLAGS_LOAD_NEXT 0x00010000U
#define TVG_FLAGS_LOAD_PREV 0x00020000U
#define OBJECTID_NONE   0
#define OBJECTID_INT    1
#define OBJECTID_OID    2
/* Note: In contrast to bson_oid_t, we internally swap the byte order, such
 * that comparison works the same for integers and MongoDB identifiers. */

struct objectid
{
    uint64_t    lo;
    uint32_t    hi;
    uint32_t    type;
};
struct vector
{
    uint64_t    refcount;
    uint32_t    flags;
    uint64_t    revision;
    float       eps;

    /* private: */
    struct query *query;

    const struct vector_ops *ops;
    uint32_t    bits;
    struct bucket1 *buckets;
    uint64_t    optimize;
};
struct graph
{
    uint64_t    refcount;
    uint32_t    flags;
    uint64_t    revision;
    float       eps;
    uint64_t    ts;
    struct objectid objectid;

    /* private: */
    struct query *query;

    struct tvg *tvg;         /* NULL for disconnected graphs */
    struct avl_entry entry;

    uint64_t    cache;       /* 0 if not cached, otherwise size of graph */
    struct list cache_entry;

    const struct graph_ops *ops;
    uint32_t    bits_source; /* 0...31 */
    uint32_t    bits_target; /* 0...31 */
    struct bucket2 *buckets;
    uint64_t    optimize;
};
struct bfs_entry
{
    double   weight;
    uint64_t count;
    uint64_t from;
    uint64_t to;
};
/* tvg macros */

/* FIXME: Avoid double declaration */
void free_graph(struct graph *graph);
struct graph *prev_graph(struct graph *graph);
struct graph *next_graph(struct graph *graph);
/* init function */

int init_libtvg(uint64_t api_version);
/* Vector functions */

struct vector *alloc_vector(uint32_t flags);
void free_vector(struct vector *vector);
struct vector *vector_duplicate(struct vector *source);
uint64_t vector_memory_usage(struct vector *vector);
int vector_empty(struct vector *vector);
int vector_clear(struct vector *vector);
int vector_has_entry(struct vector *vector, uint64_t index);
float vector_get_entry(struct vector *vector, uint64_t index);
uint64_t vector_num_entries(struct vector *vector);
uint64_t vector_get_entries(struct vector *vector, uint64_t *indices, float *weights, uint64_t max_entries);
int vector_set_entry(struct vector *vector, uint64_t index, float weight);
int vector_set_entries(struct vector *vector, uint64_t *indices, float *weights, uint64_t num_entries);
int vector_add_entry(struct vector *vector, uint64_t index, float weight);
int vector_add_entries(struct vector *vector, uint64_t *indices, float *weights, uint64_t num_entries);
int vector_add_vector(struct vector *out, struct vector *vector, float weight);
int vector_sub_entry(struct vector *vector, uint64_t index, float weight);
int vector_sub_entries(struct vector *vector, uint64_t *indices, float *weights, uint64_t num_entries);
int vector_sub_vector(struct vector *out, struct vector *vector, float weight);
int vector_del_entry(struct vector *vector, uint64_t index);
int vector_del_entries(struct vector *vector, uint64_t *indices, uint64_t num_entries);
int vector_mul_const(struct vector *vector, float constant);
double vector_sum_weights(const struct vector *vector);
double vector_norm(const struct vector *vector);
double vector_mul_vector(const struct vector *vector1, const struct vector *vector2);
double vector_sub_vector_norm(const struct vector *vector1, const struct vector *vector2);
/* Graph functions */

struct graph *alloc_graph(uint32_t flags);
void free_graph(struct graph *graph);
void unlink_graph(struct graph *graph);
struct graph *graph_duplicate(struct graph *source);
uint64_t graph_memory_usage(struct graph *graph);
struct graph *prev_graph(struct graph *graph);
struct graph *next_graph(struct graph *graph);
int graph_empty(struct graph *graph);
int graph_clear(struct graph *graph);
int graph_has_edge(struct graph *graph, uint64_t source, uint64_t target);
float graph_get_edge(struct graph *graph, uint64_t source, uint64_t target);
uint64_t graph_num_edges(struct graph *graph);
uint64_t graph_get_edges(struct graph *graph, uint64_t *indices, float *weights, uint64_t max_edges);
uint64_t graph_get_top_edges(struct graph *graph, uint64_t *indices, float *weights, uint64_t max_edges);
uint64_t graph_get_adjacent_edges(struct graph *graph, uint64_t source, uint64_t *indices, float *weights, uint64_t max_edges);
int graph_set_edge(struct graph *graph, uint64_t source, uint64_t target, float weight);
int graph_set_edges(struct graph *graph, uint64_t *indices, float *weights, uint64_t num_edges);
int graph_add_edge(struct graph *graph, uint64_t source, uint64_t target, float weight);
int graph_add_edges(struct graph *graph, uint64_t *indices, float *weights, uint64_t num_edges);
int graph_add_graph(struct graph *out, struct graph *graph, float weight);
int graph_sub_edge(struct graph *graph, uint64_t source, uint64_t target, float weight);
int graph_sub_edges(struct graph *graph, uint64_t *indices, float *weights, uint64_t num_edges);
int graph_sub_graph(struct graph *out, struct graph *graph, float weight);
int graph_del_edge(struct graph *graph, uint64_t source, uint64_t target);
int graph_del_edges(struct graph *graph, uint64_t *indices, uint64_t num_edges);
int graph_mul_const(struct graph *graph, float constant);
struct vector *graph_mul_vector(const struct graph *graph, const struct vector *vector);
struct vector *graph_in_degrees(const struct graph *graph);
struct vector *graph_in_weights(const struct graph *graph);
struct vector *graph_out_degrees(const struct graph *graph);
struct vector *graph_out_weights(const struct graph *graph);
struct vector *graph_degree_anomalies(const struct graph *graph);
struct vector *graph_weight_anomalies(const struct graph *graph);
double graph_sum_weights(const struct graph *graph);
struct vector *graph_power_iteration(const struct graph *graph, struct vector *initial_guess,
                                     uint32_t num_iterations, double tolerance, double *ret_eigenvalue);
struct graph *graph_filter_nodes(const struct graph *graph, struct vector *nodes);
struct graph *graph_normalize(const struct graph *graph);
int graph_bfs(struct graph *graph, uint64_t source, int use_weights, int (*callback)(struct graph *,
              const struct bfs_entry *, void *), void *userdata);
uint64_t graph_get_distance_count(struct graph *graph, uint64_t source, uint64_t end);
double graph_get_distance_weight(struct graph *graph, uint64_t source, uint64_t end);
struct graph *tvg_extract(struct tvg *tvg, uint64_t ts, float (*weight_func)(struct graph *,
                          uint64_t, void *), void *userdata);