libtvg/pytvg.py

#!/usr/bin/env python3
from ctypes import cdll
from ctypes import cast
from ctypes import c_int, c_int64
from ctypes import c_uint, c_uint64
from ctypes import c_float, c_double
from ctypes import c_void_p, c_char_p
from ctypes import Structure
from ctypes import POINTER
from ctypes import CFUNCTYPE
from ctypes import addressof
from ctypes.util import find_library
import collections
import functools
import itertools
import traceback
import warnings
import weakref
import numpy as np
import numpy.ctypeslib as npc
import struct
import math
import copy
import sys
import os

libname = "libtvg.dylib" if sys.platform == "darwin" else "libtvg.so"
filename = os.path.join(os.path.dirname(os.path.abspath(__file__)), libname)
lib = cdll.LoadLibrary(filename)
libc = cdll.LoadLibrary(find_library('c'))

LIBTVG_API_VERSION  = 0x00000009

TVG_FLAGS_POSITIVE  = 0x00000002
TVG_FLAGS_DIRECTED  = 0x00000004
TVG_FLAGS_STREAMING = 0x00000008

TVG_FLAGS_LOAD_NEXT = 0x00010000
TVG_FLAGS_LOAD_PREV = 0x00020000
TVG_FLAGS_READONLY  = 0x00040000

OBJECTID_NONE   = 0
OBJECTID_INT    = 1
OBJECTID_OID    = 2

class c_objectid(Structure):
    _fields_ = [("lo",       c_uint64),
                ("hi",       c_uint),
                ("type",     c_uint)]

class c_vector(Structure):
    _fields_ = [("refcount", c_uint64),
                ("flags",    c_uint),
                ("revision", c_uint64)]

class c_graph(Structure):
    _fields_ = [("refcount", c_uint64),
                ("flags",    c_uint),
                ("revision", c_uint64),
                ("ts",       c_uint64),
                ("objectid", c_objectid)]

class c_node(Structure):
    _fields_ = [("refcount", c_uint64),
                ("index",    c_uint64)]

class c_tvg(Structure):
    _fields_ = [("refcount", c_uint64),
                ("flags",    c_uint),
                ("verbosity", c_int)]

class c_mongodb_config(Structure):
    _fields_ = [("uri",          c_char_p),
                ("database",     c_char_p),
                ("col_articles", c_char_p),
                ("article_id",   c_char_p),
                ("article_time", c_char_p),
                ("filter_key",   c_char_p),
                ("filter_value", c_char_p),
                ("col_entities", c_char_p),
                ("entity_doc",   c_char_p),
                ("entity_sen",   c_char_p),
                ("entity_ent",   c_char_p),
                ("use_pool",     c_int),
                ("load_nodes",   c_int),
                ("sum_weights",  c_int),
                ("norm_weights", c_int),
                ("max_distance", c_uint64)]

class c_mongodb(Structure):
    _fields_ = [("refcount", c_uint64)]

class c_bfs_entry(Structure):
    _fields_ = [("weight",    c_double),
                ("count",     c_uint64),
                ("edge_from", c_uint64),
                ("edge_to",   c_uint64)]

class c_snapshot_entry(Structure):
    _fields_ = [("ts_min",   c_uint64),
                ("ts_max",   c_uint64)]

# Hacky: we need optional ndpointer parameters at some places.
def or_null(klass):
    class wrapper:
        @classmethod
        def from_param(cls, obj):
            if obj is None: return None
            return klass.from_param(obj)
    return wrapper

class c_uint64_ts:
    @classmethod
    def from_param(cls, obj):
        if obj < 0:
            obj = 0
        elif obj > 0xffffffffffffffff:
            obj = 0xffffffffffffffff
        return c_uint64.from_param(obj)

c_double_p       = POINTER(c_double)
c_objectid_p     = POINTER(c_objectid)
c_vector_p       = POINTER(c_vector)
c_graph_p        = POINTER(c_graph)
c_node_p         = POINTER(c_node)
c_tvg_p          = POINTER(c_tvg)
c_mongodb_config_p = POINTER(c_mongodb_config)
c_mongodb_p      = POINTER(c_mongodb)
c_snapshot_entry_p = POINTER(c_snapshot_entry)
c_bfs_entry_p    = POINTER(c_bfs_entry)
c_bfs_callback_p = CFUNCTYPE(c_int, c_graph_p, c_bfs_entry_p, c_void_p)
c_snapshot_callback_p = CFUNCTYPE(c_int, c_uint64, c_snapshot_entry_p, c_void_p)

# Before proceeding with any other function calls, first make sure that the library
# is compatible. This is especially important since there is no stable API yet.

lib.init_libtvg.argtypes = (c_uint64,)
lib.init_libtvg.restype = c_int

if not lib.init_libtvg(LIBTVG_API_VERSION):
    raise RuntimeError("Incompatible %s library! Try to run 'make'." % libname)

# Vector functions

lib.alloc_vector.argtypes = (c_uint,)
lib.alloc_vector.restype = c_vector_p

lib.free_vector.argtypes = (c_vector_p,)
lib.free_vector.restype = None

lib.vector_duplicate.argtypes = (c_vector_p,)
lib.vector_duplicate.restype = c_vector_p

lib.vector_memory_usage.argtypes = (c_vector_p,)
lib.vector_memory_usage.restype = c_uint64

lib.vector_clear.argtypes = (c_vector_p,)
lib.vector_clear.restype = c_int

lib.vector_del_small.argtypes = (c_vector_p, c_float)
lib.vector_del_small.restype = c_int

lib.vector_empty.argtypes = (c_vector_p,)
lib.vector_empty.restype = c_int

lib.vector_has_entry.argtypes = (c_vector_p, c_uint64)
lib.vector_has_entry.restype = c_int

lib.vector_get_entry.argtypes = (c_vector_p, c_uint64)
lib.vector_get_entry.restype = c_float

lib.vector_num_entries.argtypes = (c_vector_p,)
lib.vector_num_entries.restype = c_uint64

lib.vector_get_entries.argtypes = (c_vector_p, or_null(npc.ndpointer(dtype=np.uint64)), or_null(npc.ndpointer(dtype=np.float32)), c_uint64)
lib.vector_get_entries.restype = c_uint64

lib.vector_set_entry.argtypes = (c_vector_p, c_uint64, c_float)
lib.vector_set_entry.restype = c_int

lib.vector_set_entries.argtypes = (c_vector_p, npc.ndpointer(dtype=np.uint64), or_null(npc.ndpointer(dtype=np.float32)), c_uint64)
lib.vector_set_entries.restype = c_int

lib.vector_add_entry.argtypes = (c_vector_p, c_uint64, c_float)
lib.vector_add_entry.restype = c_int

lib.vector_add_entries.argtypes = (c_vector_p, npc.ndpointer(dtype=np.uint64), or_null(npc.ndpointer(dtype=np.float32)), c_uint64)
lib.vector_add_entries.restype = c_int

lib.vector_add_vector.argtypes = (c_vector_p, c_vector_p, c_float)
lib.vector_add_vector.restype = c_int

lib.vector_sub_entry.argtypes = (c_vector_p, c_uint64, c_float)
lib.vector_sub_entry.restype = c_int

lib.vector_sub_entries.argtypes = (c_vector_p, npc.ndpointer(dtype=np.uint64), or_null(npc.ndpointer(dtype=np.float32)), c_uint64)
lib.vector_sub_entries.restype = c_int

lib.vector_sub_vector.argtypes = (c_vector_p, c_vector_p, c_float)
lib.vector_sub_vector.restype = c_int

lib.vector_del_entry.argtypes = (c_vector_p, c_uint64)
lib.vector_del_entry.restype = c_int

lib.vector_del_entries.argtypes = (c_vector_p, npc.ndpointer(dtype=np.uint64), c_uint64)
lib.vector_del_entries.restype = c_int

lib.vector_mul_const.argtypes = (c_vector_p, c_float)
lib.vector_mul_const.restype = c_int

lib.vector_sum_weights.argtypes = (c_vector_p,)
lib.vector_sum_weights.restype = c_double

lib.vector_norm.argtypes = (c_vector_p,)
lib.vector_norm.restype = c_double

lib.vector_mul_vector.argtypes = (c_vector_p, c_vector_p)
lib.vector_mul_vector.restype = c_double

lib.vector_sub_vector_norm.argtypes = (c_vector_p, c_vector_p)
lib.vector_sub_vector_norm.restype = c_double

lib.vector_save_binary.argtypes = (c_vector_p, c_char_p)
lib.vector_save_binary.restype = c_int

lib.vector_load_binary.argtypes = (c_char_p,)
lib.vector_load_binary.restype = c_vector_p

# Graph functions

lib.alloc_graph.argtypes = (c_uint,)
lib.alloc_graph.restype = c_graph_p

lib.free_graph.argtypes = (c_graph_p,)
lib.free_graph.restype = None

lib.unlink_graph.argtypes = (c_graph_p,)
lib.unlink_graph.restype = None

lib.graph_duplicate.argtypes = (c_graph_p,)
lib.graph_duplicate.restype = c_graph_p

lib.graph_clear.argtypes = (c_graph_p,)
lib.graph_clear.restype = c_int

lib.graph_memory_usage.argtypes = (c_graph_p,)
lib.graph_memory_usage.restype = c_uint64

lib.prev_graph.argtypes = (c_graph_p,)
lib.prev_graph.restype = c_graph_p

lib.next_graph.argtypes = (c_graph_p,)
lib.next_graph.restype = c_graph_p

lib.graph_del_small.argtypes = (c_graph_p, c_float)
lib.graph_del_small.restype = c_int

lib.graph_empty.argtypes = (c_graph_p,)
lib.graph_empty.restype = c_int

lib.graph_has_edge.argtypes = (c_graph_p, c_uint64, c_uint64)
lib.graph_has_edge.restype = c_int

lib.graph_get_edge.argtypes = (c_graph_p, c_uint64, c_uint64)
lib.graph_get_edge.restype = c_float

lib.graph_num_edges.argtypes = (c_graph_p,)
lib.graph_num_edges.restype = c_uint64

lib.graph_get_edges.argtypes = (c_graph_p, or_null(npc.ndpointer(dtype=np.uint64)), or_null(npc.ndpointer(dtype=np.float32)), c_uint64)
lib.graph_get_edges.restype = c_uint64

lib.graph_get_nodes.argtypes = (c_graph_p,)
lib.graph_get_nodes.restype = c_vector_p

lib.graph_get_top_edges.argtypes = (c_graph_p, or_null(npc.ndpointer(dtype=np.uint64)), or_null(npc.ndpointer(dtype=np.float32)), c_uint64)
lib.graph_get_top_edges.restype = c_uint64

lib.graph_get_adjacent_edges.argtypes = (c_graph_p, c_uint64, or_null(npc.ndpointer(dtype=np.uint64)), or_null(npc.ndpointer(dtype=np.float32)), c_uint64)
lib.graph_get_adjacent_edges.restype = c_uint64

lib.graph_set_edge.argtypes = (c_graph_p, c_uint64, c_uint64, c_float)
lib.graph_set_edge.restype = c_int

lib.graph_set_edges.argtypes = (c_graph_p, npc.ndpointer(dtype=np.uint64), or_null(npc.ndpointer(dtype=np.float32)), c_uint64)
lib.graph_set_edges.restype = c_int

lib.graph_add_edge.argtypes = (c_graph_p, c_uint64, c_uint64, c_float)
lib.graph_add_edge.restype = c_int

lib.graph_add_edges.argtypes = (c_graph_p, npc.ndpointer(dtype=np.uint64), or_null(npc.ndpointer(dtype=np.float32)), c_uint64)
lib.graph_add_edges.restype = c_int

lib.graph_add_graph.argtypes = (c_graph_p, c_graph_p, c_float)
lib.graph_add_graph.restype = c_int

lib.graph_sub_edge.argtypes = (c_graph_p, c_uint64, c_uint64, c_float)
lib.graph_sub_edge.restype = c_int

lib.graph_sub_edges.argtypes = (c_graph_p, npc.ndpointer(dtype=np.uint64), or_null(npc.ndpointer(dtype=np.float32)), c_uint64)
lib.graph_sub_edges.restype = c_int

lib.graph_sub_graph.argtypes = (c_graph_p, c_graph_p, c_float)
lib.graph_sub_graph.restype = c_int

lib.graph_del_edge.argtypes = (c_graph_p, c_uint64, c_uint64)
lib.graph_del_edge.restype = c_int

lib.graph_del_edges.argtypes = (c_graph_p, npc.ndpointer(dtype=np.uint64), c_uint64)
lib.graph_del_edges.restype = c_int

lib.graph_mul_const.argtypes = (c_graph_p, c_float)
lib.graph_mul_const.restype = c_int

lib.graph_mul_vector.argtypes = (c_graph_p, c_vector_p)
lib.graph_mul_vector.restype = c_vector_p

lib.graph_in_degrees.argtypes = (c_graph_p,)
lib.graph_in_degrees.restype = c_vector_p

lib.graph_in_weights.argtypes = (c_graph_p,)
lib.graph_in_weights.restype = c_vector_p

lib.graph_out_degrees.argtypes = (c_graph_p,)
lib.graph_out_degrees.restype = c_vector_p

lib.graph_out_weights.argtypes = (c_graph_p,)
lib.graph_out_weights.restype = c_vector_p

lib.graph_degree_anomalies.argtypes = (c_graph_p,)
lib.graph_degree_anomalies.restype = c_vector_p

lib.graph_weight_anomalies.argtypes = (c_graph_p,)
lib.graph_weight_anomalies.restype = c_vector_p

lib.graph_sum_weights.argtypes = (c_graph_p,)
lib.graph_sum_weights.restype = c_double

lib.graph_power_iteration.argtypes = (c_graph_p, c_vector_p, c_uint, c_double, c_double_p)
lib.graph_power_iteration.restype = c_vector_p

lib.graph_filter_nodes.argtypes = (c_graph_p, c_vector_p)
lib.graph_filter_nodes.restype = c_graph_p

lib.graph_normalize.argtypes = (c_graph_p,)
lib.graph_normalize.restype = c_graph_p

lib.graph_save_binary.argtypes = (c_graph_p, c_char_p)
lib.graph_save_binary.restype = c_int

lib.graph_load_binary.argtypes = (c_char_p,)
lib.graph_load_binary.restype = c_graph_p

lib.graph_bfs.argtypes = (c_graph_p, c_uint64, c_int, c_bfs_callback_p, c_void_p)
lib.graph_bfs.restype = c_int

lib.graph_get_distance_count.argtypes = (c_graph_p, c_uint64, c_uint64)
lib.graph_get_distance_count.restype = c_uint64

lib.graph_get_distance_weight.argtypes = (c_graph_p, c_uint64, c_uint64)
lib.graph_get_distance_weight.restype = c_double
